# PoGoCmp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
src/Cli/: CMakeLists.txt  ProgramOptions.h  main.cpp
src/DbGen/: CMakeLists.txt  PoGoDbGen.cpp
src/Lib/: CMakeLists.txt  MathUtils.h  PoGoCmp.cpp  PoGoCmp.h  PoGoDb.h  StringUtils.h  Utf8.cpp  Utf8.h
src/PoGoCmp/: CMakeLists.txt  MinimalWin32.h  PoGoCmp.cpp  PoGoCmp.h  PoGoCmpApi.h  PoGoCmpDb.h  StringUtils.h  Utf8.cpp  Utf8.h
src/PoGoCmpCli/: CMakeLists.txt  main.cpp
src/PoGoCmpDbGen/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  NameTest.cpp  StringUtilsTest.cpp  Test1.cpp
